<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_view_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_logo_stock"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/stock_card_view">

            <ImageView
                android:id="@+id/iv_logo_stock"
                android:src="@drawable/ic_company"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/stock_logo"
                android:contentDescription="@string/desc_logo_company" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_ticker"
            android:text="@string/stock_default_ticker"
            app:layout_constraintStart_toEndOf="@id/cv_logo_stock"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/stock_ticker" />

        <TextView
            android:id="@+id/tv_title_stock"
            android:text="@string/stock_default_title"
            app:layout_constraintStart_toEndOf="@id/cv_logo_stock"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_ticker"
            style="@style/stock_title" />

        <ImageView
            android:id="@+id/iv_favourite"
            android:src="@drawable/ic_default_star"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_ticker"
            app:layout_constraintStart_toEndOf="@id/tv_title_ticker"
            app:layout_constraintTop_toTopOf="@id/tv_title_ticker"
            style="@style/stock_favourite"
            android:contentDescription="@string/desc_btn_favourite" />

        <TextView
            android:id="@+id/tv_current_price"
            android:text="@string/default_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/stock_current_price" />

        <TextView
            android:id="@+id/tv_day_delta"
            android:text="@string/default_delta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_price"
            style="@style/stock_delta_day" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

