<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <TextView
        android:id="@+id/tv_title_stock"
        android:text="@string/default_ticker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/detail_ticker_stock" />

    <TextView
        android:id="@+id/tv_name_stock"
        android:text="@string/default_name"
        app:layout_constraintEnd_toEndOf="@id/tv_title_stock"
        app:layout_constraintStart_toStartOf="@id/tv_title_stock"
        app:layout_constraintTop_toBottomOf="@id/tv_title_stock"
        style="@style/detail_name_stock" />

    <ImageView
        android:id="@+id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/tv_name_stock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_stock"
        app:srcCompat="@drawable/ic_back"
        tools:ignore="RtlSymmetry"
        style="@style/detail_btn_back"
        android:contentDescription="@string/desc_btn_back" />

    <ImageView
        android:id="@+id/iv_favourite_detail"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:srcCompat="@drawable/ic_star_detail"
        style="@style/detail_btn_favourite"
        android:contentDescription="@string/desc_btn_favourite"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_stock"
        app:tabGravity="start"
        app:tabIndicatorHeight="0dp"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/black"
        app:tabTextAppearance="@style/TabLayoutStyle"
        app:tabTextColor="@color/grey"
        style="@style/detail_tab_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>